# cf_ai_kono

./: .gitignore  README.md  biome.jsonc  package.json  vite.config.ts
apps/api/: .env.example  README.md  biome.jsonc  drizzle.config.ts  package.json  tsconfig.json  tsconfig.node.json  worker-configuration.d.ts  wrangler.jsonc
apps/api/drizzle/migrations/: 0000_busy_toro.sql  0002_medical_sugar_man.sql
apps/api/src/: auth.ts  bindings.ts  hc.ts  index.ts  logger.ts  route.ts  types.ts
apps/app/: .eslintrc.cjs  components.json  eslint.config.js  package.json  spotlight.html  tsconfig.json  vite.config.ts
apps/app/src/: App.tsx  Spotlight.tsx  main.tsx  query.d.ts  routeTree.gen.ts
apps/app/src-tauri/: rustfmt.toml
apps/web/: .gitignore  biome.jsonc  components.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
apps/web/src/: constant.ts  main.tsx  query.d.ts  root.css  routeTree.gen.ts
kono-api/: .env.example  README.md  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
kono-api/src/: auth.ts  index.ts
kono-api/src/db/: index.ts
kono-api/src/routes/: auth.ts  chat.ts
kono-app/: README.md  index.html  package.json  spotlight.html  tailwind.config.js
kono-app/src/: App.tsx  main.tsx
kono-app/src-tauri/: tauri.conf.json
kono-app/src/lib/: auth-client.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: desktop.json
src-tauri/src/: dashboard.rs  lib.rs  main.rs  shortcuts.rs
(+74 files in other folders)
