[package]
name = "workspace"
version = "0.1.0"
description = ""
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
anyhow = "1.0.98"
backtrace = "0.3.75"
log = "0.4.27"
env_logger = "0.11.8"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cargo-clippy = []
